@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<site
-      mirrorsURL="http://www.eclipse.org/downloads/download.php?file=/linuxtools/updates-nightly-juno/site.xml&amp;format=xml">
-   <description url="http://download.eclipse.org/linuxtools/updates-nightly-juno">
-      Nightly builds of Linux Tools project.
+<site>
+   <description>
+      Nightly builds of LTTng project.
    </description>
-   <feature url="features/org.eclipse.linuxtools.lttng_1.0.0.qualifier.jar" id="org.eclipse.linuxtools.lttng" version="1.0.0.qualifier" os="linux" ws="*" arch="*">
+   <feature url="features/org.eclipse.linuxtools.lttng_0.0.0.qualifier.jar" id="org.eclipse.linuxtools.lttng" version="0.0.0" os="linux" ws="*" arch="*">
       <category name="LTTng"/>
    </feature>
-   <feature url="features/org.eclipse.linuxtools.lttng2.kernel_1.1.0.qualifier.jar" id="org.eclipse.linuxtools.lttng2.kernel" version="1.1.0.qualifier">
+   <feature url="features/org.eclipse.linuxtools.lttng2.kernel_0.0.0.qualifier.jar" id="org.eclipse.linuxtools.lttng2.kernel" version="0.0.0">
       <category name="LTTng"/>
    </feature>
    <category-def name="LTTng" label="Linux Tracing Toolkit"/>
