@@ -59,6 +59,7 @@ import org.eclipse.linuxtools.tmf.ui.views.uml2sd.load.IUml2SDLoader;
 import org.eclipse.swt.widgets.Display;
 import org.eclipse.ui.ISelectionListener;
 import org.eclipse.ui.IWorkbenchPart;
+import org.eclipse.ui.IWorkbenchWindow;
 import org.eclipse.ui.PlatformUI;
 import org.eclipse.ui.progress.IProgressConstants;
 
@@ -509,7 +510,11 @@ public class TmfUml2SDSyncLoader extends TmfComponent implements IUml2SDLoader, 
        super.dispose();
        fLock.lock();
        try {
-           PlatformUI.getWorkbench().getActiveWorkbenchWindow().getSelectionService().removePostSelectionListener(this);
+           IWorkbenchWindow window = PlatformUI.getWorkbench().getActiveWorkbenchWindow();
+           // During Eclipse shutdown the active workbench window is null
+           if (window != null) {
+               window.getSelectionService().removePostSelectionListener(this);
+           }
            fView.setSDFindProvider(null);
            fView.setSDPagingProvider(null);
            fView.setSDFilterProvider(null);
